fixing overflowing & arrows

--- a/styles/_config.scss
+++ b/styles/_config.scss
@@ -22,9 +22,6 @@ body {
 	font-family: $font-sec;
 	font-weight: 400;
 }
-.site-wrapper {
-	overflow-x: hidden;
-}
 
 h1,
 h2,
