--- a/styles/main.scss
+++ b/styles/main.scss
@@ -62,7 +62,7 @@ header .button-primary {
 	position: sticky;
 	bottom: 15px;
 	left: 50%;
-	margin: 1.7em auto;
+	margin: 1.7em 0;
 	margin-bottom: 0.6em;
 	width: 30px;
 	height: 25px;
@@ -350,7 +350,7 @@ h1 {
 	padding: 0.1em;
 	opacity: 0;
 
-	transform: translateX(120%);
+	transform: translateX(-120%);
 	transition: transform 0.5s ease-out, max-height 5.5s ease-out, opacity 0.5s ease-out;
 }
 .pricing--active {
